Fixed issue with selecting a file in a file explorer on some Linux distributions and Mac OS.